--- a/notebook/p005_price_regression_aimes.ipynb
+++ b/notebook/p005_price_regression_aimes.ipynb
@@ -99,7 +99,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {
     "execution": {
      "iopub.execute_input": "2020-10-09T17:52:06.051112Z",
@@ -109,12 +109,24 @@
      "shell.execute_reply.started": "2020-10-09T17:52:06.051067Z"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'pandas'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-3-04bba8c9cbbf>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0;32mimport\u001b[0m \u001b[0mpandas\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0mpd\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mnumpy\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0;31m#from MyToolBox import MyToolBox as mb\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0;31m#from MyToolBox import CustomTransformers as ct\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0;31m#pip install ../dist/MyToolBox-0.0.1.tar.gz\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'pandas'"
+     ]
+    }
+   ],
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
-    "from MyToolBox import MyToolBox as mb\n",
-    "from MyToolBox import CustomTransformers as ct\n",
+    "#from MyToolBox import MyToolBox as mb\n",
+    "#from MyToolBox import CustomTransformers as ct\n",
     "#pip install ../dist/MyToolBox-0.0.1.tar.gz\n",
     "\n",
     "\n",
@@ -124,13 +136,6 @@
     "pd.set_option('MAX_COLUMNS', None)\n",
     "pd.set_option('MAX_ROWS', None)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "markdown",
@@ -2949,9 +2954,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "p005-env",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "p005-env"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -2963,7 +2968,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.0"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
